public class GoToJail extends Fields{

    @Override
    public void doStuff(Player player) {
        System.out.println("GoToJail: " + getLabel());
    }
}
