public class Parking extends Fields{
    @Override
    public void doStuff(Player[] player) {
        System.out.println("Parking: " + getLabel());
    }
}
